--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "morgan": "^1.10.0",
     "mysql2": "2.1.0",
     "sequelize": "6.3.4",
-    "shelljs": "0.8.4"
+    "shelljs": "0.8.4",
+    "swagger-jsdoc": "^6.2.7",
+    "swagger-ui-express": "^4.6.0"
   },
   "main": "src/server.js",
   "scripts": {
