--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 #### SERVER VARS
-NODE_ENV=development
-API_PORT=3000
+NODE_ENV=development # development or test
+PORT=3000
 
 #### DATABASE VARS
 MYSQL_HOST=localhost
