--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
   "scripts": {
     "prestart": "npx sequelize-cli db:create && npx sequelize-cli db:migrate",
     "start": "node .",
-    "start:test": "API_PORT=3030 NODE_ENV=test npm start",
+    "start:test": "PORT=3030 NODE_ENV=test npm start",
     "kill:test": "kill -9 $(lsof -t -i:3030) &> /dev/null",
-    "drop": "npx sequelize-cli db:drop",
+    "migration": "npx sequelize-cli db:create && npx sequelize-cli db:migrate",
     "seed": "npx sequelize-cli db:seed:all",
+    "drop": "npx sequelize-cli db:drop",
     "pretest": "(npm run kill:test && NODE_ENV=test npm run start:test) &",
     "test": "npx -y wait-on -t 300000 http://localhost:3030 && NODE_ENV=test jest -i --verbose --forceExit",
     "posttest": "npm run kill:test",
